<resources>
    <!-- App -->
    <string name="app_name">Playlist Maker</string>
    <string name="app_font_family">YS Display</string>

    <!-- Captions -->
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="reload">Обновить</string>
    <string name="clear_history">Очистить историю</string>

    <!-- Default text -->
    <string name="default_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="default_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_course">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="url_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="developer_email">test@tchoo.ru</string>
    <string name="no_data_found">Ничего не нашлось</string>
    <string name="connect_err">Проблемы со связью</string>
    <string name="connect_descr">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_text">Вы искали</string>
    <string name="time">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="player_start_position">00:00</string>
</resources>