<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/header_padding">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_back_btn"
        style="@style/ToolbarStyle"
        app:title="@string/settings"
        app:navigationIcon="@drawable/arrow_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/content_margin">

        <FrameLayout
            android:id="@+id/settings_theme"
            style="@style/SettingsMenuFrameStyle">

            <TextView
                style="@style/SettingsMenuTextStyle"
                android:text="@string/black_theme"/>

            <Switch
                android:id="@+id/settings_theme_switch"
                android:theme="@style/SCBSwitch"
                style="@style/SettingsMenuImgStyle"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/settings_share"
            style="@style/SettingsMenuFrameStyle">

            <TextView
                style="@style/SettingsMenuTextStyle"
                android:text="@string/share"/>

            <ImageView
                style="@style/SettingsMenuImgStyle"
                android:src="@drawable/share"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/settings_support"
            style="@style/SettingsMenuFrameStyle">

            <TextView
                style="@style/SettingsMenuTextStyle"
                android:text="@string/support" />

            <ImageView
                style="@style/SettingsMenuImgStyle"
                android:src="@drawable/support"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/settings_agreement"
            style="@style/SettingsMenuFrameStyle">

            <TextView
                style="@style/SettingsMenuTextStyle"
                android:text="@string/user_agreement"/>

            <ImageView
                style="@style/SettingsMenuImgStyle"
                android:src="@drawable/arrow_forward"/>


        </FrameLayout>

    </LinearLayout>

</LinearLayout>