<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_blue"
    android:padding="@dimen/header_padding"
    android:fontFamily="@string/app_font_family">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textSize="@dimen/header_text_size"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/content_margin">


        <Button
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/icon_color"
            android:text="@string/search"
            android:textColor="@color/text_color"
            android:textSize="@dimen/content_caption_size"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/library_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/icon_color"
            android:text="@string/library"
            android:textColor="@color/text_color"
            android:textSize="@dimen/content_caption_size"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/icon_color"
            android:text="@string/settings"
            android:textColor="@color/text_color"
            android:textSize="@dimen/content_caption_size"
            android:textAllCaps="false"
            />
    </LinearLayout>

</LinearLayout>