<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/header_padding">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_back_btn"
        style="@style/ToolbarStyle"
        app:title="@string/search"
        app:navigationIcon="@drawable/arrow_back"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_height" >

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/search"
            android:textColorHint="@color/black"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:lines="1"
            android:background="?attr/background"
            android:paddingLeft="@dimen/search_padding"
            android:paddingRight="@dimen/search_padding"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />
        <ImageView
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/search"/>

        <ImageView
            android:id="@+id/removeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/remove"
            android:visibility="gone"/>
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="23dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track"
        tools:itemCount="20"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/nodatafound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/nodatafound"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_data_found"
            android:layout_gravity="center_horizontal"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="19sp"
            android:fontFamily="@font/ys_display_bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/connect_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/nodatafound"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/connect_err"
            android:layout_gravity="center_horizontal"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="19sp"
            android:fontFamily="@font/ys_display_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/connect_descr"
            android:layout_gravity="center_horizontal"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="center"
            android:textSize="19sp"
            android:fontFamily="@font/ys_display_bold"/>
        <Button
            android:id="@+id/reload_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/reload"
            app:cornerRadius="54dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:textColor="?attr/colorPrimaryVariant"
            android:textAllCaps="false"
            android:fontFamily="@font/ys_display_regular"/>
    </LinearLayout>
</LinearLayout>